--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -8,3 +8,13 @@ chromadb
 beautifulsoup4
 requests
 python-dotenv
+langchain
+langchain-community
+langchain-core
+google-generativeai
+chromadb
+beautifulsoup4
+requests
+python-dotenv
+fastapi
+uvicorn
