--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,9 +1,9 @@
-fastapi==0.110.1
-uvicorn==0.27.1
-langchain==0.2.1
-langchain-community==0.0.34
-google-generativeai==0.5.4
-chromadb==0.4.24
-beautifulsoup4==4.12.3
-requests==2.31.0
-python-dotenv==1.0.1
+beautifulsoup4
+chromadb
+fastapi
+google-generativeai
+langchain
+langchain-community
+python-dotenv
+requests
+uvicorn
